--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@
 
 
 :root {
+    --accent-0: var(--color-stone-950);
     --accent-1: var(--color-stone-900);   /* #581C87 */
     --accent-2: var(--color-stone-800);  /* #1C1917 */
     --accent-3: var(--color-stone-600); 
@@ -14,4 +15,8 @@
 
     --logo: var(--color-indigo-500);
     --hover: var(--color-indigo-600);
+
+    /*for failure*/
+    --failure: oklch(49.398% 0.14764 24.285);
+
 }
